--- a/pag3.html
+++ b/pag3.html
@@ -10,6 +10,7 @@
 <body>
     <h1>pag3</h1>
     <p>post numero 1!</p>
+    <p>post numero 2!</p>
     <a href="index.html">Ir para a pagina inicial</a>
 </body>
 
